Подгоняем форму под ПП

--- a/source/less/blocks/cat-data.less
+++ b/source/less/blocks/cat-data.less
@@ -65,10 +65,11 @@
 
 @media (min-width: @desktop-width) {
   .cat-data {
-    margin-left: 63px;
+    margin-left: 0;
   }
 
   .cat-data__wrapper {
     width: 570px;
+    margin-left: 0;
   }
 }
