--- a/source/less/blocks/owner-data.less
+++ b/source/less/blocks/owner-data.less
@@ -17,11 +17,6 @@
   padding-left: 10px;
 }
 
-.owner-data__head {
-  margin-bottom: 10px;
-  margin-top: 21px;
-}
-
 .owner-data__mail {
   margin-top: 25px;
   margin-bottom: 0;
@@ -34,33 +29,23 @@
 
 @media (min-width: @tablet-width) {
   .owner-data {
-    max-width: 770px;
+    width: 770px;
   }
 
   .owner-data__mail {
     margin-top: 21px;
-  }
-
-  .owner-data__head {
-    display: flex;
-    max-width: 1440px;
-    margin-top: 65px;
-    font-size: 36px;
-    line-height: 36px;
-    margin-bottom: 49px;
-    padding-left: 0;
+    margin-bottom: 5px;
   }
 
   .owner-data__wrapper {
     padding-left: 47px;
-    width: 650px;
+    max-width: 650px;
     margin-left: 22px;
   }
 
   .owner-data__name {
-    height: 52px;
     padding-left: 17px;
-    width: 540px;
+    width: auto;
     font-size: 20px;
     line-height: 20px;
     flex-grow: 1;
@@ -70,40 +55,55 @@
   .owner-data__phone {
     display: flex;
     align-items: baseline;
+    height: 52px;
   }
 
   .owner-data__info {
-    height: 40px;
-    max-width: 87px;
+    width: auto;
+    margin-right: 10px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .owner-data {
-    max-width: 1440px;
-    margin: 0;
+    margin: 0 auto;
+    padding-left: 0;
+    width: 1220px;
   }
 
   .owner-data__wrapper {
     flex-direction: row;
-    padding-left: 56px;
-  }
-
-  .owner-data__head {
-    margin-top: 45px;
+    padding-left: 0;
+    margin-left: 0;
+    margin-right: 0;
+    max-width: 1220px;
   }
 
   .owner-data__name {
-    width: 450px;
+    width: auto;
+    margin-left: 0;
+    flex-grow: 1;
+    padding-left: 12px;
   }
 
   .owner-data__phone {
     margin-top: 25px;
-    margin-left: 93px;
+    margin-left: 90px;
   }
 
   .owner-data__mail,
   .owner-data__phone {
     margin-top: 28px;
+    width: 560px;
+  }
+
+  .owner-data__info {
+    width: auto;
+    height: auto;
+    margin-right: 25px;
+  }
+
+  .owner-data__mail {
+    margin-bottom: 0;
   }
 }
