--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -32,11 +32,10 @@
 @media (min-width: @desktop-width) {
   .program {
     max-width: 1220px;
-    margin: 0;
-    margin-left: 95px;
+    margin: 0 auto;
   }
 
   .program__intro {
-    padding-left: 10px;
+    padding-left: 0;
   }
 }
