--- a/source/less/blocks/cat-addition.less
+++ b/source/less/blocks/cat-addition.less
@@ -10,11 +10,6 @@
   flex-direction: column;
 }
 
-.cat-addition__head {
-  margin-top: 0;
-  margin-bottom: 21px;
-}
-
 .cat-addition__item {
   margin-bottom: 6px;
 }
@@ -56,15 +51,6 @@
     margin-right: 85px;
   }
 
-  .cat-addition__head {
-    margin-top: 33px;
-    font-size: 36px;
-    line-height: 36px;
-    margin-left: 0;
-    padding-left: 0;
-    margin-bottom: 21px;
-  }
-
   .cat-addition__label::before {
     width: 40px;
     height: 40px;
@@ -80,20 +66,21 @@
     width: 1220px;
   }
 
-  .cat-addition__head {
-    margin-top: 37px;
-    margin-left: 0;
-    width: 1440px;
-  }
-
   .cat-addition__item {
     width: 250px;
     padding-right: 0;
     margin-right: 0;
+    margin-top: 15px;
   }
 
   .cat-addition__wrapper {
     padding-left: 0;
     justify-content: space-between;
+  }
+
+  .cat-addition__label::before {
+    right: 11px;
+    bottom: -10px;
+    margin-left: 22px;
   }
 }
