--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -36,13 +36,25 @@
     line-height: 25px;
     margin-left: 43px;
   }
+
+  .welcome__address {
+    width: 155px;
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .welcome__address-spb {
+    margin-top: 20px;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .welcome {
-    width: 500px;
+    width: 450px;
     margin: 0;
-    margin-left: 145px;
-    margin-top: 125px;
+    margin-left: 140px;
+    margin-top: 160px;
   }
 }
