Начинаем добавлять адаптивную графику

--- a/source/less/blocks/catalog-description.less
+++ b/source/less/blocks/catalog-description.less
@@ -29,11 +29,12 @@
     border-bottom: 1px solid @color-border;
     font-size: 16px;
     height: 20px;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
+    padding-top: 5px;
   }
 
   .catalog-description {
-    margin-top: 23px;
+    margin-top: 20px;
     margin-bottom: 25px;
     width: 250px;
   }
