--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -57,6 +57,11 @@
   .header__logo {
     margin: auto;
   }
+
+  .header__logo-image {
+    width: 174px;
+    height: 59px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -71,5 +76,10 @@
 
   .header__menu {
     flex-grow: 0;
+  }
+
+  .header__logo-image {
+    width: 203px;
+    height: 60px;
   }
 }
