Работа над ошибками

--- a/source/less/blocks/owner-data.less
+++ b/source/less/blocks/owner-data.less
@@ -69,6 +69,8 @@
     margin: 0 auto;
     padding-left: 0;
     width: 1220px;
+    margin-top: 37px;
+    margin-bottom: 48px;
   }
 
   .owner-data__wrapper {
