Добавляем retina-dpi

--- a/source/less/blocks/introduce.less
+++ b/source/less/blocks/introduce.less
@@ -4,7 +4,7 @@
   background-size: 100%;
   padding-top: 23px;
 
-  @media (min-resolution: @retina-dppx) {
+  @media (min-resolution: @retina-dppx), (min-resolution: @retina-dpi) {
     background-image: url("../img/index-background-mobile@2x.jpg");
   }
 }
