--- a/source/less/variable.less
+++ b/source/less/variable.less
@@ -19,4 +19,5 @@
 @font-family--oswald: "Oswald", "Arial", sans-serif;
 @tablet-width: 768px;
 @desktop-width: 1300px;
-@retina-dppx: 1.5dppx, 144dpi;
+@retina-dpi: 144dpi;
+@retina-dppx: 1.5dppx;
