--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -58,7 +58,7 @@
     background-repeat: no-repeat;
     z-index: 0;
 
-    @media (min-resolution: @retina-dppx) {
+    @media (min-resolution: @retina-dppx), (min-resolution: @retina-dpi) {
       background-image: url("../img/index-background-desktop@2x.jpg");
     }
   }
