Продолжаем добавлять адаптивную графику

--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -232,6 +232,11 @@
     left: 270px;
     z-index: 3;
   }
+
+  .example__img {
+    width: auto;
+    height: auto;
+  }
 }
 
 @media (min-width: @desktop-width) {
