--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -24,9 +24,10 @@
 
 @media (min-width: @tablet-width) {
   .welcome {
-    max-width: 710px;
-    padding-top: 65px;
+    max-width: 768px;
+    padding-top: 75px;
     justify-content: space-between;
+    margin-bottom: 40px;
   }
 
   .welcome__partnership {
@@ -52,9 +53,12 @@
 
 @media (min-width: @desktop-width) {
   .welcome {
-    width: 450px;
+    position: absolute;
+    background-color: @color-back--main;
+    width: 670px;
+    height: 201px;
     margin: 0;
     margin-left: 140px;
-    margin-top: 160px;
+    margin-top: 0;
   }
 }
