--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -60,6 +60,7 @@
 
     @media (min-resolution: @retina-dppx), (min-resolution: @retina-dpi) {
       background-image: url("../img/index-background-desktop@2x.jpg");
+      background-size: 720px auto;
     }
   }
 
