--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -15,6 +15,7 @@
 
   @media (min-resolution: @retina-dppx), (min-resolution: @retina-dpi) {
     background-image: url("../img/gift-photo-mobile@2x.jpg");
+    background-size: 280px auto;
   }
 }
 
@@ -54,6 +55,7 @@
 
     @media (min-resolution: @retina-dppx), (min-resolution: @retina-dpi) {
       background-image: url("../img/gift-photo-tablet@2x.jpg");
+      background-size: 708px auto;
     }
   }
 
@@ -76,6 +78,7 @@
 
     @media (min-resolution: @retina-dppx), (min-resolution: @retina-dpi) {
       background-image: url("../img/gift-photo-desktop@2x.jpg");
+      background-size: 245px auto;
     }
   }
 }
