--- a/source/less/blocks/works.less
+++ b/source/less/blocks/works.less
@@ -56,6 +56,7 @@
 
   @media (min-resolution: @retina-dppx), (min-resolution: @retina-dpi) {
     background-image: url("../img/advantage-leaf@2x.png");
+    background-size: 50px 50px;
   }
 }
 
@@ -64,6 +65,7 @@
 
   @media (min-resolution: @retina-dppx), (min-resolution: @retina-dpi) {
     background-image: url("../img/advantage-powder@2x.png");
+    background-size: 50px 50px;
   }
 }
 
@@ -72,6 +74,7 @@
 
   @media (min-resolution: @retina-dppx), (min-resolution: @retina-dpi) {
     background-image: url("../img/advantage-dining@2x.png");
+    background-size: 50px 50px;
   }
 }
 
@@ -80,6 +83,7 @@
 
   @media (min-resolution: @retina-dppx), (min-resolution: @retina-dpi) {
     background-image: url("../img/advantage-clock@2x.png");
+    background-size: 50px 50px;
   }
 }
 
