Пытаемся завершить проект

--- a/source/less/blocks/burger.less
+++ b/source/less/blocks/burger.less
@@ -1,16 +1,13 @@
 .burger {
-  width: 25px;
+  width: 20px;
   height: 20px;
   cursor: pointer;
   position: relative;
   display: inline-block;
   border: none;
-  border-top: 2px solid @color-font--black;
-  border-bottom: 2px solid @color-font--black;
-  text-shadow: 0 1px 0 @color-font--black;
   top: 10px;
 }
-
+/*
 .burger::before {
   content: "";
   position: absolute;
@@ -19,35 +16,36 @@
   width: 100%;
   border-top: 2px solid @color-font--black;
 }
-/*
-.burger--no-js {
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-  margin: auto;
-  position: relative;
-  display: inline-block;
-  border: none;
-  margin-left: 55px;
-}
 
-.burger--no-js::after,
-.burger--no-js::before {
+.burger {
+   width: 25px;
+  border-top: 2px solid @color-font--black;
+  border-bottom: 2px solid @color-font--black;
+  text-shadow: 0 1px 0 @color-font--black;
+}
+*/
+.burger::after,
+.burger::before {
   position: absolute;
   content: "";
   height: 2px;
   width: 27px;
-  background-color: @color-font--main;
+  background-color: @color-font--black;
+  left: -4px;
 }
 
-.burger--no-js::after {
+.burger::after {
   transform: rotate(45deg);
 }
 
-.burger--no-js::before {
+.burger::before {
   transform: rotate(-45deg);
 }
-*/
+
+.burger--no-js {
+  display: none;
+}
+
 @media (min-width: @tablet-width) {
   .burger {
     display: none;
