--- a/source/less/blocks/cat-data.less
+++ b/source/less/blocks/cat-data.less
@@ -26,7 +26,7 @@
 }
 
 .cat-data__name {
-  border: 1px solid @color-back--catalog;
+  border: 1px solid @color-back--catalog-opacity;
   height: 45px;
   text-transform: uppercase;
   flex-grow: 1;
