--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -61,7 +61,7 @@
   }
 
   .catalog__item {
-    background-image: linear-gradient(to top, @color-back--catalog, @color-back--catalog 80%, @color-back--main 20%, @color-back--main);
+    background-image: linear-gradient(to top, @color-back--catalog-opacity, @color-back--catalog-opacity 80%, @color-back--main 20%, @color-back--main);
     width: 339px;
     border: none;
     margin-bottom: 67px;
