--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -21,6 +21,10 @@
   padding: 0;
 }
 
+.header__menu--no-js {
+  display: block;
+}
+
 .header__logo {
   margin-left: 7px;
   margin-right: 65px;
@@ -40,6 +44,7 @@
   .header {
     margin-top: 0;
     padding-top: 18px;
+    padding-left: 0;
     flex-direction: row;
     width: 710px;
   }
@@ -47,6 +52,7 @@
   .header__menu {
     display: block;
     flex-grow: 1;
+    margin-left: 22px;
   }
 
   .header__wrapper {
