--- a/source/less/blocks/more-info.less
+++ b/source/less/blocks/more-info.less
@@ -31,6 +31,7 @@
   line-height: 20px;
   font-weight: normal;
   margin-bottom: 0;
+  margin-top: 24px;
 }
 
 .more-info__show {
@@ -44,6 +45,14 @@
   text-align: center;
   background-color: @color-back--text;
   padding-top: 10px;
+}
+
+.more-info__show:hover {
+  background-color: @color-button--show;
+}
+
+.more-info__show:active {
+  color: @color-text--show;
 }
 
 @media (min-width: @tablet-width) {
