--- a/source/less/variable.less
+++ b/source/less/variable.less
@@ -3,13 +3,19 @@
 @color-back--main:#ffffff;
 @color-back--opacity: rgba(255,255,255,0.3);
 @color-back--hvr: rgba(255,255,255,0.6);
+@color-back--catalog-opacity:rgba(205, 205, 205, 0.5);
 @color-back--text:#f2f2f2;
 @color-back--catalog: #cdcdcd;
+@color-form--hover: #bababa;
 @color-slider: #dcdcdc;
 @color-slider--shadow: #eaeaea;
+@color-button--show: #ebebeb;
+@color-text--show: rgba(68,68,68,0.3);
 @color-font--main:#111111;
 @color-font--hvr: rgba(17,17,17,0.6);
 @color-font--act: rgba(17,17,17,0.3);
+@color-cat: rgba(17,17,17,0.23);
+@color-cat--hvr: rgba(17,17,17,0.4);
 @color-font--black: #222222;
 @color-font--arial: #444444;
 @color-border: #ededed;
