--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -54,17 +54,29 @@
 }
 
 .example__cat {
+  padding-bottom: 5px;
   font-family: @font-family--oswald;
   font-size: 16px;
   line-height: 20px;
   border: none;
+  border-bottom: 1px dotted @color-cat;
+
+  &:hover {
+    border-bottom: 1px solid @color-cat--hvr;
+  }
+
+  &:active {
+    border: none;
+  }
 }
 
 .example__cat--is {
+  width: 42px;
   text-align: right;
 }
 
 .example__cat--was {
+  width: 38px;
   text-align: left;
 }
 
@@ -116,7 +128,7 @@
   top: 5px;
 }
 
-
+/*
 .example__checkbox {
   position: absolute;
   width: 1px;
@@ -127,11 +139,12 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
-.example__cat--is:checked + .example__indicator::after {
+*/
+/*
+.example__indicator::after {
   background-image: linear-gradient(to right, @color-back--main, @color-back--main 50%, @color-button 50%, @color-button);
 }
-
+*/
 .example__img {
   margin-top: 25px;
   position: relative;
@@ -148,12 +161,14 @@
     line-height: 60px;
     font-weight: normal;
     margin-top: 48px;
+    padding-left: 5px;
   }
 
   .example__text {
     font-size: 16px;
     line-height: 24px;
     margin-top: 64px;
+    padding-left: 5px;
   }
 
   .example__bold {
@@ -174,13 +189,12 @@
     position: relative;
     text-align: right;
     left: 515px;
-    bottom: 102px;
+    bottom: 95px;
   }
 
   .example__cat {
     font-size: 20px;
     line-height: 20px;
-    border-bottom: dotted 1px;
   }
 
   .example__description {
@@ -196,13 +210,15 @@
 
   .example__features {
     justify-content: flex-start;
-    margin-top: 60px;
+    margin-top: 56px;
     margin-left: 0;
   }
 
   .example__indicator {
     justify-content: space-between;
     width: 570px;
+    margin-left: 65px;
+    margin-top: 0;
   }
 
   .example__indicator::after {
@@ -225,17 +241,36 @@
     width: 7px;
     height: 7px;
     background: @color-button;
-    border: 12px solid #ededed;
+    border: 12px solid @color-border;
     border-radius: 50%;
-    box-shadow: 0 3px 1px 0 #cdcdcd;
+    box-shadow: 0 3px 1px 0 @color-back--catalog;
     cursor: pointer;
     left: 270px;
     z-index: 3;
   }
 
+  .example__cat:hover + .example__cat--was::after {
+    box-shadow: 0 5px 1px 0 @color-back--catalog;
+  }
+
+  .example__cat:active + .example__cat--was::after {
+    box-shadow: inset 0 2px 2px 0  @color-button;
+  }
+
   .example__img {
+    margin-top: 0;
     width: auto;
     height: auto;
+    top: -25px;
+    left: 15px;
+  }
+
+  .example__cat--is {
+    width: 52px;
+  }
+
+  .example__cat--was {
+    width: 48px;
   }
 }
 
