--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,12 +1,24 @@
+.footer {
+  position: relative;
+}
+
 .footer__info {
   background-color: @color-back--text;
   padding: 0;
+  padding-top: 40px;
 }
 
 .footer__image {
   margin: auto;
-  margin-top: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+
+  &:hover {
+    opacity: 0.4;
+  }
+
+  &:active {
+    opacity: 0.2;
+  }
 }
 
 .footer__container {
@@ -27,6 +39,21 @@
   }
 }
 
+.footer__map {
+  position: relative;
+  z-index: 1;
+  border: none;
+  height: 400px;
+  width: 100%;
+}
+
+.footer__iframe {
+  width: 100%;
+  height: 400px;
+  position: absolute;
+  z-index: 4;
+}
+
 @media (min-width: @tablet-width) {
   .footer__container {
     flex-direction: row;
@@ -35,8 +62,6 @@
 
   .footer__image {
     margin: 0;
-    margin-top: 62px;
-    margin-bottom: 64px;
   }
 
   .footer__map {
