--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -35,8 +35,9 @@
   font-size: 16px;
   line-height: 20px;
   color: @color-back--main;
-  width: 159px;
+  width: 165px;
   margin: auto;
+  margin-top: 45px;
 }
 
 .present__a {
@@ -62,6 +63,11 @@
   .present::before {
     bottom: 35px;
     right: 33px;
+  }
+
+  .present__text {
+    margin-top: 0;
+    text-align: left;
   }
 }
 
