--- a/source/less/blocks/program-choice.less
+++ b/source/less/blocks/program-choice.less
@@ -11,6 +11,7 @@
 }
 
 .program-choice__get {
+  position: relative;
   padding-left: 20px;
   text-decoration: none;
   color: @color-font--main;
@@ -20,6 +21,19 @@
   display: block;
   margin-top: 20px;
   margin-bottom: 21px;
+  background-image: url("../img/icon-right-arrow-long.svg");
+  background-repeat: no-repeat;
+  background-position-x: 115px;
+  background-size: 25px 12px;
+
+  &:active {
+    opacity: 0.7;
+  }
+
+  &:hover {
+    background-size: 34px 12px;
+    background-image: url("../img/icon-right-arrow-verylong.svg");
+  }
 }
 
 .program-choice__item {
@@ -99,6 +113,7 @@
   width: 240px;
 }
 
+
 @media (min-width: @tablet-width) {
   .program-choice__item {
     margin-top: 34px;
@@ -111,8 +126,8 @@
 
   .program-choice__icon {
     position: absolute;
-    top: 90px;
-    left: 440px;
+    top: 51px;
+    left: 445px;
     width: 200px;
     height: 200px;
   }
@@ -123,12 +138,12 @@
     line-height: 24px;
     font-size: 16px;
     padding-top: 21px;
-    padding-left: 46px;
+    padding-left: 51px;
   }
 
   .program-choice__item-head {
-    margin-top: 72px;
-    margin-left: 45px;
+    margin-top: 36px;
+    margin-left: 52px;
     margin-bottom: 0;
     line-height: 37px;
     font-size: 36px;
@@ -137,9 +152,11 @@
   .program-choice__get {
     line-height: 20px;
     font-size: 20px;
-    padding-left: 46px;
+    padding-left: 51px;
     margin-top: 35px;
-    margin-bottom: 60px;
+    margin-bottom: 98px;
+    background-position-x: 182px;
+    background-position-y: 5px;
   }
 
   .program-choice__item:nth-child(2) .program-choice__info {
@@ -149,16 +166,16 @@
   .program-choice__section--slim::after {
     width: 141px;
     height: 194px;
-    top: 55px;
-    right: 80px;
+    top: 41px;
+    right: 93px;
     left: auto;
   }
 
   .program-choice__section--pro::after {
     width: 268px;
     height: 113px;
-    top: 120px;
-    right: 40px;
+    top: 96px;
+    right: 30px;
     left: auto;
   }
 }
