--- a/source/less/blocks/program-form.less
+++ b/source/less/blocks/program-form.less
@@ -23,6 +23,7 @@
   width: 280px;
   height: 150px;
   margin: 0 auto;
+  border: 1px solid @color-back--catalog-opacity;
 }
 
 .program-form__nb {
@@ -76,21 +77,47 @@
 .program-form__head--owner {
   margin-bottom: 10px;
   margin-top: 21px;
+  padding-left: 17px;
 }
 
 .program-form__head--cat {
-  margin-top: 12px;
-  padding-left: 8px;
+  margin-top: 29px;
+  padding-left: 17px;
 }
 
 .program-form__head--addition {
-  margin-top: 0;
-  margin-bottom: 21px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding-left: 17px;
 }
 
 .program-form__container-nb {
   max-width: 280px;
   margin: 0 auto;
+}
+
+.program-form__check {
+  border: 1px solid @color-back--catalog-opacity;
+}
+
+.program-form__check:hover {
+  border: 1px solid @color-back--catalog;
+}
+
+.program-form__check:active {
+  border: 2px solid @color-font--arial;
+}
+
+.program-form__check:required:invalid:not(:placeholder-shown) {
+  border: 2px solid @color-form--error;
+}
+
+.program-form__check:required:invalid:not(:placeholder-shown) + .owner-data__icon {
+  fill: @color-form--error;
+}
+
+.program-form__check:active + .owner-data__icon {
+  fill: @color-button;
 }
 
 @media (min-width: @tablet-width) {
@@ -167,7 +194,7 @@
   }
 
   .program-form__head--addition {
-    margin-top: 33px;
+    margin-top: 50px;
     font-size: 36px;
     line-height: 36px;
     margin-left: 0;
@@ -234,7 +261,7 @@
     width: 100%;
     padding-bottom: 15px;
     padding-top: 15px;
-    margin-top: 35px;
+    margin-top: 30px;
   }
 
   .program-form__line-head::after {
