--- a/source/less/blocks/smm-list.less
+++ b/source/less/blocks/smm-list.less
@@ -4,8 +4,10 @@
   border-top: 1px solid @color-border;
   border-bottom: 1px solid @color-border;
   padding: 0;
-  padding-top: 22px;
-  padding-bottom: 22px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 12px;
+  margin: 0;
 }
 
 .smm-list__item {
@@ -17,9 +19,20 @@
   margin-right: 37px;
 }
 
+.smm-list__icon {
+  &:hover {
+    fill: @color-button;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .smm-list {
     border: none;
     align-items: center;
+    padding: 0;
   }
 }
