--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -1,7 +1,7 @@
 .welcome {
   max-width: 280px;
   margin: auto;
-  margin-top: 45px;
+  margin-top: 48px;
   display: flex;
 }
 
@@ -24,8 +24,9 @@
 
 @media (min-width: @tablet-width) {
   .welcome {
-    max-width: 768px;
-    padding-top: 75px;
+    margin-top: 25px;
+    max-width: 630px;
+    padding-top: 101px;
     justify-content: space-between;
     margin-bottom: 40px;
   }
@@ -35,7 +36,7 @@
     font-size: 20px;
     text-align: left;
     line-height: 25px;
-    margin-left: 43px;
+    margin-left: 0;
   }
 
   .welcome__address {
@@ -44,6 +45,7 @@
     flex-direction: column;
     font-size: 16px;
     line-height: 20px;
+    text-align: right;
   }
 
   .welcome__address-spb {
@@ -60,5 +62,6 @@
     margin: 0;
     margin-left: 140px;
     margin-top: 0;
+    z-index: 6;
   }
 }
