--- a/source/less/global.less
+++ b/source/less/global.less
@@ -1,5 +1,5 @@
 body {
-  background-color: violet;
+  background-color: @color-back--main;
   min-width: 320px;
   font-family: @font-family--oswald;
   font-weight: normal;
